# Medved

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  marching_cubes.h
include/algorithms/: .marching_cubes.h.swp  .triangulate.h.swp  .voxelize.hpp.kate-swp  compute_components.hpp  fill_holes.h  fill_holes.hpp  marching_cubes.h  marching_cubes.hpp  marching_cubes.hpp~  triangulate.h  triangulate.hpp  voxelize.hpp  voxelize.hpp~
include/grids/: MCTablesIsoEx.hh  RegularGrid.cc  RegularGrid.cc~  RegularGrid.hh~  ScalarGridT.hh  ScalarGrid_traits.h  ScalarGrid_traits.h~
include/hmira/adapters/: ff_adapter.hpp  vv_adapter.hpp
include/hmira/algorithms/: compute_components.hpp  flip_normals.hpp  marching_cubes.hpp  triangulate.hpp  voxelize.hpp
include/hmira/geometry/: point_in_polyhedron.hpp  ray_face_intersection.hpp
include/hmira/grids/: ScalarGrid_traits.h
include/hmira/meshes/: OpenMeshX.hpp  OpenMeshX.tcc
include/hmira/range/: edges.hpp  faces.hpp
include/meshes/: .OpenMeshX.h.swp  .OpenMeshX.tcc.swp  OpenMeshX.h  OpenMeshX.hpp  OpenMeshX.hpp~  OpenMeshX.tcc  OpenMeshX.tcc~
tests/: generate_sphere.cpp  parallel_triangulate.cpp  point_in_polyhedron.cpp  rasterize.cpp  rasterize_and_triangulate.cpp  triangulate.cpp
thesis/en/: Makefile  appendix.tex  bibliography.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  chap8.tex  chap9.tex  epilog.tex  preface.tex  thesis.dvi  thesis.out  thesis.ps  thesis.tex  thesis_citations.bib  time_complexity.tex  traits.tex
thesis/img/: bevel.eps  cube_example.eps  extrude.eps  fv_rep_mesh.eps  he_rep_mesh.eps  implicit_surface.eps  killEF.eps  killFmakeR.eps  killV.eps  makeEF.eps  makeEV.eps  makeFkillR.eps  makeV.eps  mar_cub_case0.eps  mar_cub_case1.eps  mar_cub_case10.eps  mar_cub_case11.eps  mar_cub_case12.eps  mar_cub_case13.eps  mar_cub_case14.eps  mar_cub_case14.eps.autosave  mar_cub_case2.eps  mar_cub_case3.eps  mar_cub_case4.eps  mar_cub_case5.eps  mar_cub_case6.eps  mar_cub_case7.eps  mar_cub_case8.eps  mar_cub_case9.eps  marc_cub_inter.eps  truncate.eps  voxelize_1.eps  voxelize_2.eps  voxelize_3.eps  voxelize_4.eps  we_rep_mesh.eps
